--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -28,16 +28,16 @@ jobs:
           (New-Object System.Net.WebClient).DownloadFile($url, $output)
           Expand-Archive .\Ubuntu.zip .\Ubuntu
           Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
-          .\Ubuntu\ubuntu1804.exe install --root
-          wsl -u root -d Ubuntu-18.04 wget wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-          wsl -u root -d Ubuntu-18.04 bash Miniconda3-latest-Linux-x86_64.sh -b
-          wsl -u root -d Ubuntu-18.04 Get-Service LxssManager | Restart-Service
-          wsl -u root -d Ubuntu-18.04 source ~/.bashrc
-          wsl -u root -d Ubuntu-18.04 source ~/miniconda3/etc/profile.d/conda.sh
-          wsl -u root -d Ubuntu-18.04 conda init
+          .\Ubuntu\ubuntu1804.exe install
+          wsl wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+          wsl bash Miniconda3-latest-Linux-x86_64.sh -b
+          wsl Get-Service LxssManager | Restart-Service
+          wsl source ~/.bashrc
+          wsl source ~/miniconda3/etc/profile.d/conda.sh
+          wsl conda init
       - name: Install dependencies
         run: |
-          wsl -u root -d Ubuntu-18.04 conda env create --file environment.yml
+          wsl conda env create --file environment.yml
       - name: Run tests
         run: |
-          wsl -u root -d Ubuntu-18.04 bash tests/integration_test.sh
+          wsl bash tests/integration_test.sh
