--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -8,12 +8,17 @@ on:
 jobs:
   tima-windows:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: wsl-bash {0}
     steps:
       - name: Set git to use LF
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v2
+      - name: Setup WSL
+        uses: Vampire/setup-wsl@v1.1.0
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
@@ -21,23 +26,9 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           miniconda-version: "latest"  
-      - name: Setup WSL
-        run: |
-          $url = "https://aka.ms/wsl-ubuntu-1804"
-          $output = ".\Ubuntu.zip"
-          (New-Object System.Net.WebClient).DownloadFile($url, $output)
-          Expand-Archive .\Ubuntu.zip .\Ubuntu
-          Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
-          .\Ubuntu\ubuntu1804.exe install
-          wsl wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-          wsl bash Miniconda3-latest-Linux-x86_64.sh -b
-          wsl Get-Service LxssManager | Restart-Service
-          wsl source ~/.bashrc
-          wsl source ~/miniconda3/etc/profile.d/conda.sh
-          wsl conda init
       - name: Install dependencies
         run: |
-          wsl conda env create --file environment.yml
+          conda env create --file environment.yml
       - name: Run tests
         run: |
-          wsl bash tests/integration_test.sh
+          bash tests/integration_test.sh
