--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: Setup WSL
         uses: Vampire/setup-wsl@v1.1.0
       - name: Set git to use LF
+        shell: powershell
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
