--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -14,6 +14,8 @@ jobs:
         
     steps:
     - uses: Vampire/setup-wsl@v1
+      with:
+        distribution: Ubuntu-latest
     
     - run: |
           npm ci
