--- a/config/default/prepare_taxa.yaml
+++ b/config/default/prepare_taxa.yaml
@@ -1,8 +1,8 @@
 tool: gnps # manual
 input: data/interim/example_metadata_manual.csv # if you have a manual metadata table
-output: data/interim/taxa/db1c51fa29a64892af520698a18783e4_taxed.tsv.gz  # if you have your metadata table within GNPS
-extension: FALSE # is the filename extension present in your feature table?
+output: data/interim/taxa/a177b17ded9f4e01bf343317bfc0372e_taxed.tsv.gz  # if you have your metadata table within GNPS
+extension: TRUE # is the filename extension present in your feature table?
 column_name: ATTRIBUTE_species  # biological_source
-gnps: db1c51fa29a64892af520698a18783e4 # needed depending on the tool you used
+gnps: a177b17ded9f4e01bf343317bfc0372e # needed depending on the tool you used
 top_k: 1 # number of organisms per feature
 force:
