--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.14.2
+pandoc: '2.15'
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   hello_world: hello_world.html
-last_built: 2021-10-06T13:52Z
+last_built: 2021-10-31T21:45Z
 
