--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
-    covr
+    covr,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
