--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,35 @@
 Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
 Version: 0.0.0.9000
-Authors@R: 
+Description: Taxonomically Informed Metabolite Annotation
+Authors@R: c(
     person(given = "Adriano",
            family = "Rutz",
            role = c("aut", "cre"),
            email = "adriano.rutz@unige.ch",
-           comment = c(ORCID = "0000-0003-0443-9902"))
-Description: Taxonomically Informed Metabolite Annotation
+           comment = c(ORCID = "0000-0003-0443-9902")),
+    person(given = "Pierre-Marie",
+           family = "Allard",
+           role = c("ctb"),
+           email = "adriano.rutz@unige.ch",
+           comment = c(ORCID = "0000-0003-0443-9902")),
+    )
+Maintainer: Adriano Rutz <adriano.rutz@unige.ch>
+Depends:
+    R (>= 4.1)
+Imports:
+    crayon
+    data.table
+    docopt
+    dplyr
+    jsonlite
+    purrr
+    readr
+    R.utils
+    splitstackshape
+    stringr
+    tidyr
+    yaml
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
