--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -24,8 +24,8 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: 
-            - pkgdown
-            - rsconnect
+            pkgdown
+            rsconnect
           needs: website
 
       - name: Deploy package
