--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,3 +39,5 @@ Suggests:
     covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
+URL: https://github.com/taxonomicallyinformedannotation/tima-r
