--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,3 +42,32 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Collate:
+    'biological_weighting.R'
+    'chemical_weighting.R'
+    'clean_gnverifier.R'
+    'cleaning.R'
+    'colors.R'
+    'decoration.R'
+    'dist_groups.R'
+    'export_params.R'
+    'form_adduct_neg.R'
+    'form_adduct_pos.R'
+    'get_gnps.R'
+    'get_params.R'
+    'helpers.R'
+    'homemadeShift.R'
+    'log_debug.R'
+    'manipulating_taxo_otl.R'
+    'ms1.R'
+    'parse_cli_params.R'
+    'parse_yaml_params.R'
+    'parse_yaml_paths.R'
+    'plot_histograms.R'
+    'preclean_gnverifier.R'
+    'prepare_plot.R'
+    'prepare-hierarchy_2.R'
+    'prepare-hierarchy.R'
+    'timaR-package.R'
+    'utils-tidy-eval.R'
+    'y_as_na.R'
