--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Authors@R: c(
 Maintainer: Adriano Rutz <adriano.rutz@unige.ch>
 Description: Taxonomically Informed Metabolite Annotation
 License: GPL (>= 3)
-URL: https://github.com/taxonomicallyinformedannotation/tima-r
+URL: https://github.com/taxonomicallyinformedannotation/tima-r,
+    https://taxonomicallyinformedannotation.github.io/tima-r
 BugReports: 
     https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
@@ -34,8 +35,8 @@ Imports:
     withr,
     yaml
 Suggests: 
-    roxygen2,
     covr,
+    roxygen2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
