--- a/paths.yaml
+++ b/paths.yaml
@@ -50,15 +50,13 @@ doc:
   path: doc
 img:
   path: img
-src:
-  path: inst/scripts
-  gnverifier: src/gnverifierScript.sh
-  gnverifier_2: src/gnverifierScript_2.sh
-  docopt:
-    path: src/docopt
-  preprocessing:
-    path: src/preprocessing
-  processing:
-    path: src/processing
+inst:
+  path: inst
+  scripts:
+    path: inst/scripts
+    gnverifier: inst/scripts/gnverifierScript.sh
+    gnverifier_2: inst/scripts/gnverifierScript_2.sh
+    docopt:
+      path: inst/scripts/docopt
 tests:
   path: tests
