--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -26,6 +26,10 @@ jobs:
           extra-packages: pkgdown
           needs: website
 
+      - name: Install rsconnect
+        run: install.packages("rsconnect")
+        shell: Rscript {0}
+        
       - name: Deploy package
         run: |
           git config --local user.name "$GITHUB_ACTOR"
