--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v1
         with:
-          error-on: "error"
+          error-on: '"error"'
 
       - name: Show testthat output
         if: always()
