--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -46,7 +46,7 @@ jobs:
         with:
           extra-packages: rcmdcheck
       
-      - name: Install dependencies
+      - name: Install specific dependencies
         run: |
           bash inst/scripts/get_lotus.sh
           bash inst/scripts/get_example_isdb.sh
