--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,18 +27,17 @@ Imports:
     jsonlite,
     lifecycle,
     purrr,
-    R.utils,
     readr,
     rlang (>= 0.4.11),
     splitstackshape,
     stringr,
     tidyr,
-    withr,
     yaml
 Suggests: 
     covr,
     roxygen2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    utils
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
@@ -73,3 +72,5 @@ Collate:
     'timaR-package.R'
     'utils-tidy-eval.R'
     'y_as_na.R'
+VignetteBuilder: 
+    knitr
