--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -12,6 +12,10 @@ jobs:
   tima-test:
     name: tima-${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
