--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -28,6 +28,12 @@ jobs:
       - name: Install dependencies
         run: |
           conda env create -q --file environment.yml
+      - name: Install Windows specific dependencies
+        run: |
+          if [matrix.os == 'windows-latest']; then
+              choco install wget
+              choco install unzip
+          fi
       - name: Run tests
         run: |
           bash tests/integration_test.sh
