--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -22,9 +22,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - uses: conda-incubator/setup-miniconda@v2
+      - name: setup-conda
+        uses: s-weigand/setup-conda@v1.0.7
         with:
-          miniconda-version: "latest"      
+          update-conda: true
+          conda-channels: conda-forge, bioconda, defaults    
       - name: Install dependencies
         run: |
           conda env create -q --file environment.yml
