--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -33,8 +33,9 @@ jobs:
       - name: Install Windows specific dependencies
         if: matrix.os == 'windows-latest'
         run: |
-          choco install wget
+          choco install gzip
           choco install unzip
+          choco install wget
       - name: Run tests
         run: |
           bash tests/integration_test.sh
