--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -22,14 +22,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: setup-conda
-        uses: s-weigand/setup-conda@v1.0.7
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          update-conda: true
-          conda-channels: conda-forge, bioconda, defaults    
-      - name: Install dependencies
-        run: |
-          conda env create -q --file environment.yml
+          python-version: 3.8
+          mamba-version: "*"
+          channels: conda-forge, bioconda, defaults
+          channel-priority: true
+          activate-environment: tima
+          environment-file: environment.yml
       - name: Setup WSL
         if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
