--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -24,7 +24,7 @@ jobs:
           python-version: 3.8
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          update-conda: true
+          auto-update-conda: true
           python-version: 3.8
           mamba-version: "*"
           channels: conda-forge, bioconda, defaults
