--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -18,20 +18,17 @@ jobs:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Setup WSL
-        if: matrix.os == 'windows-latest'
+      - if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
-      - name: Install Windows specific dependencies
-        if: matrix.os == 'windows-latest'
-        run: |
-          choco install curl
-          choco install gzip
-          choco install unzip
-          choco install wget
+        with:
+          additional-packages:
+            curl
+            gzip
+            unzip
+            wget
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
@@ -42,5 +39,6 @@ jobs:
           activate-environment: tima
           environment-file: environment.yml
       - name: Run tests
+        shell: bash -l {0} 
         run: |
           bash tests/integration_test.sh
