--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -39,6 +39,11 @@ jobs:
           activate-environment: base
           environment-file: environment.yml
       - uses: s-weigand/setup-conda@v1
-      - name: Run tests
+      - name: Run tests (unix)
+        if: matrix.os != 'windows-latest'
         run: |
-          bash tests/integration_test.sh
+           bash tests/integration_test.sh
+      - name: Run tests (windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          wsl bash tests/integration_test.sh
