--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -21,6 +21,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: r-lib/actions/setup-r@v1
+        with:
+          r-version: release
       - if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
         with:
@@ -47,6 +50,4 @@ jobs:
       - name: Run tests (windows)
         if: matrix.os == 'windows-latest'
         run: |
-          git rm --cached -r .
-          git reset --hard
           wsl bash tests/integration_test.sh
