--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -21,12 +21,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - uses: r-lib/actions/setup-r@v1
-        with:
-          extra-repositories:
-            bioconductor
-            git
-      - uses: r-lib/actions/setup-r-dependencies@v1
       - if: matrix.os == 'windows-latest'
         uses: Vampire/setup-wsl@v1.1.0
         with:
@@ -53,4 +47,5 @@ jobs:
       - name: Run tests (windows)
         if: matrix.os == 'windows-latest'
         run: |
+          wsl conda env update -f environment.yml
           wsl bash tests/integration_test.sh
