--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -27,6 +27,7 @@ jobs:
           additional-packages:
             curl
             gzip
+            make
             r-base
             unzip
             wget
