--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -16,34 +16,24 @@ jobs:
       fail-fast: false
       matrix:
         os: [ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - uses: r-lib/actions/setup-r@v1
       - if: matrix.os == 'windows-latest'
-        uses: Vampire/setup-wsl@v1.1.0
-        with:
-          additional-packages:
-            apt-get
-            curl
-            gcc
-            gzip
-            install
-            libgl1-mesa-glx
-            libegl1-mesa
-            libxrandr2
-            libxrandr2
-            libxss1
-            libxcursor1
-            libxcomposite1
-            libasound2
-            libxi6
-            libxtst6
-            make
-            r-base
-            unzip
-            wget
+        uses: crazy-max/ghaction-chocolatey@v1.6.0
+      - if: matrix.os == 'windows-latest'
+        run: |
+          choco install curl
+          choco install gzip
+          choco install make
+          choco install unzip
+          choco install wget
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
@@ -54,16 +44,6 @@ jobs:
           activate-environment: base
           environment-file: environment.yml
       - uses: s-weigand/setup-conda@v1
-      - name: Run tests (unix)
-        if: matrix.os != 'windows-latest'
+      - name: Run tests
         run: |
-          bash tests/integration_test.sh
-      - name: Run tests (windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          wsl 
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
-          bash ~/miniconda.sh -b -p $HOME/miniconda
-          conda init
-          conda env create -f environment.yml base
           bash tests/integration_test.sh
