--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Suggests:
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
+ByteCompile: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Collate:
