--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,23 +47,23 @@ ByteCompile: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Collate:
+    'biological_cleaning.R'
     'biological_weighting.R'
+    'chemical_cleaning.R'
     'chemical_weighting.R'
     'clean_gnverifier.R'
-    'cleaning.R'
     'colors.R'
     'decoration.R'
     'dist_groups.R'
     'export_params.R'
     'form_adduct_neg.R'
     'form_adduct_pos.R'
-    'get_gnps.R'
     'get_params.R'
-    'helpers.R'
     'homemadeShift.R'
     'log_debug.R'
     'manipulating_taxo_otl.R'
-    'ms1.R'
+    'ms1_annotation.R'
+    'non_ms1_annotation.R'
     'parse_cli_params.R'
     'parse_yaml_params.R'
     'parse_yaml_paths.R'
@@ -72,6 +72,12 @@ Collate:
     'prepare_plot.R'
     'prepare-hierarchy_2.R'
     'prepare-hierarchy.R'
+    'read_clusters.R'
+    'read_edges.R'
+    'read_features.R'
+    'read_metadata.R'
+    'read_nap.R'
+    'read_results.R'
     'timaR-package.R'
     'utils-tidy-eval.R'
     'y_as_na.R'
