--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Suggests:
     covr,
     knitr (>= 1.1.0),
     roxygen2,
+    rmarkdown,
     testthat (>= 3.0.0),
     utils
 Config/testthat/edition: 3
