--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,3 @@
-useurl: https://taxonomicallyinformedannotation.github.io/tima-r
+url: https://taxonomicallyinformedannotation.github.io/tima-r
 template:
   bootstrap: 5
-  bootswatch: lux
