--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -29,8 +29,8 @@ jobs:
           choco install wget
       - name: Run install
         run: |
-          Rscript -e 'if(!require(devtools)){install.packages("devtools")}
-          devtools::install_github("taxonomicallyinformedannotation/tima-r")'
+          Rscript -e 'if(!require(remotes)){install.packages("remotes")}
+          remotes::install_github("taxonomicallyinformedannotation/tima-r")'
       - name: Run tests
         run: |
           bash tests/integration_test.sh
