--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -28,6 +28,9 @@ jobs:
           choco install unzip
           choco install wget
       - name: Run install
+        env:
+          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
           Rscript -e 'if(!require(remotes)){install.packages("remotes")}
           remotes::install_github("taxonomicallyinformedannotation/tima-r")'
