--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r-dependencies@v1
+      with:
+        extra-packages: |
+        remotes
       - if: matrix.os == 'windows-latest'
         run: |
           choco install curl
