--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -23,6 +23,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
+          cache-version: 2
           extra-packages: |
             remotes
       - if: matrix.os == 'windows-latest'
