--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -21,18 +21,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r-dependencies@v1
       - if: matrix.os == 'windows-latest'
         run: |
           choco install curl
           choco install gzip
           choco install unzip
           choco install wget
-      - name: Run install
-        env:
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          bash install_package.sh
       - name: Run tests
         run: |
           bash tests/integration_test.sh
