--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(enquos)
 export(export_params)
 export(form_adducts_neg)
 export(form_adducts_pos)
+export(get_lotus)
 export(get_params)
 export(homemadeShift)
 export(log_debug)
