--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Install specific dependencies
         run: |
-          bash inst/scripts/get_lotus.sh
-          bash inst/scripts/get_example_isdb.sh
+          Rscript inst/scripts/get_lotus.R
+          Rscript inst/scripts/get_example_isdb.R
           bash inst/scripts/get_gnverifier.sh
         shell: bash
 
