--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -14,7 +14,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]
+        os: [ 
+          'ubuntu-latest', 
+          'macos-latest' 
+          # 'windows-latest'
+        ]
     defaults:
       run:
         shell: bash
