--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,7 @@ Collate:
     'export_params.R'
     'form_adduct_neg.R'
     'form_adduct_pos.R'
+    'get_example_isdb.R'
     'get_params.R'
     'homemadeShift.R'
     'log_debug.R'
