--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(enquos)
 export(export_params)
 export(form_adducts_neg)
 export(form_adducts_pos)
+export(get_example_isdb)
 export(get_params)
 export(homemadeShift)
 export(log_debug)
