--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
 export(plot_histograms)
+export(prepare_adducts)
 export(prepare_hierarchy)
 export(prepare_hierarchy_2)
 export(prepare_plot)
