--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,9 +2,8 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches:
-      - main
-    tags: [ '*' ]
+    branches: [main]
+    tags: ['*']
 
 name: pkgdown
 
@@ -28,10 +27,6 @@ jobs:
             pkgdown
             rmarkdown
           needs: website
-
-      - name: Install rsconnect
-        run: install.packages("rsconnect")
-        shell: Rscript {0}
 
       - name: Deploy package
         run: |
