--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ 
-          'ubuntu-latest', 
+          # 'ubuntu-latest', 
           'macos-latest' 
           # 'windows-latest'
         ]
