--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,6 +71,7 @@ Collate:
     'parse_yaml_paths.R'
     'plot_histograms.R'
     'prepare_adducts.R'
+    'prepare_closed.R'
     'prepare_plot.R'
     'prepare-hierarchy_2.R'
     'prepare-hierarchy.R'
