--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(parse_yaml_paths)
 export(plot_histograms)
 export(prepare_adducts)
 export(prepare_closed)
+export(prepare_edges)
 export(prepare_hierarchy)
 export(prepare_hierarchy_2)
 export(prepare_plot)
