--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,9 +73,10 @@ Collate:
     'prepare_adducts.R'
     'prepare_closed.R'
     'prepare_edges.R'
+    'prepare_features_classification.R'
     'prepare_plot.R'
-    'prepare-hierarchy_2.R'
-    'prepare-hierarchy.R'
+    'prepare_hierarchy_2.R'
+    'prepare_hierarchy.R'
     'read_clusters.R'
     'read_edges.R'
     'read_features.R'
