--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(plot_histograms)
 export(prepare_adducts)
 export(prepare_closed)
 export(prepare_edges)
+export(prepare_features_classification)
 export(prepare_hierarchy)
 export(prepare_hierarchy_2)
 export(prepare_plot)
