--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -74,9 +74,16 @@ Collate:
     'prepare_closed.R'
     'prepare_edges.R'
     'prepare_features_classification.R'
-    'prepare_plot.R'
+    'prepare_features_components.R'
+    'prepare_gnps.R'
     'prepare_hierarchy_2.R'
     'prepare_hierarchy.R'
+    'prepare_isdb.R'
+    'prepare_library.R'
+    'prepare_lotus.R'
+    'prepare_plot.R'
+    'prepare_sirius.R'
+    'prepare_taxa.R'
     'read_clusters.R'
     'read_edges.R'
     'read_features.R'
