--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,9 +32,17 @@ export(prepare_adducts)
 export(prepare_closed)
 export(prepare_edges)
 export(prepare_features_classification)
+export(prepare_features_components)
+export(prepare_gnps)
 export(prepare_hierarchy)
 export(prepare_hierarchy_2)
+export(prepare_isdb)
+export(prepare_library)
+export(prepare_lotus)
 export(prepare_plot)
+export(prepare_sirius)
+export(prepare_taxa)
+export(process_annotations)
 export(read_clusters)
 export(read_edges)
 export(read_features)
