--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,7 @@ export(prepare_lotus)
 export(prepare_plot)
 export(prepare_sirius)
 export(prepare_taxa)
-export(process_annotations)
+# export(process_annotations)
 export(read_clusters)
 export(read_edges)
 export(read_features)
