--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(read_metadata)
 export(read_nap)
 export(read_results)
 export(taxo_decoration)
+export(with_dir)
 export(y_as_na)
 import(rlang)
 importFrom(glue,glue)
