--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -15,9 +15,9 @@ jobs:
     strategy:
       matrix:
         os: [ 
-          # 'ubuntu-latest', 
-          'macos-latest' 
-          # 'windows-latest'
+          'ubuntu-latest', 
+          'macos-latest', 
+          'windows-latest'
         ]
     defaults:
       run:
