--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         os: [ 
           'ubuntu-latest', 
-          'macos-latest', 
-          'windows-latest'
+          'macos-latest' 
+          # 'windows-latest' writes_delim with na="" fails
         ]
     defaults:
       run:
