--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,10 +1,12 @@
 name: "Tag latest release of action tagger :zap:"
 
 on:
-  release:
-    types:
-      - published
-      - edited
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   run-tag-latest:
